# dockwin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  components.json  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-30T22-04-10Z__src-lib-views-containersview-svelte.md
crates/dockwin-cli/: Cargo.toml
crates/dockwin-cli/src/: main.rs
crates/dockwin-core/: Cargo.toml
crates/dockwin-core/src/: backend.rs  lib.rs  ops.rs  wsl.rs
distro/: dockwin-supervise.sh  provision-inside.sh  wsl.conf
docs/: architecture.md  development.md  installer.md
example/: compose.yml
scripts/: Install-Dockwin.ps1  Start-Dockwin.ps1  Stop-Dockwin.ps1  Uninstall-Dockwin.ps1  bundle.mjs  make-latest-json.mjs  release.mjs  set-version.mjs
src/: App.svelte  app.css  app.html  main.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd_containers_ext.rs  cmd_images_ext.rs  cmd_networks.rs  cmd_system.rs  cmd_volumes.rs  commands.rs  docker.rs  main.rs  relay.rs
src/lib/: ContainerDetails.svelte  ContainerList.svelte  EngineGate.svelte  ImageList.svelte  ImagesView.svelte  NetworksView.svelte  StackList.svelte  SystemView.svelte  UpdateBanner.svelte  VolumesView.svelte  api.ts  containersApi.ts  imagesApi.ts  networksApi.ts  openExternal.ts  theme.svelte.ts  types.ts  updater.ts
src/lib/api/: external.ts  images.ts  index.ts  system.ts  updater.ts  volumes.ts
src/lib/components/: AppSidebar.svelte  ConfirmHost.svelte  KeyValue.svelte  Pill.svelte  Sparkline.svelte  StatusDot.svelte  ThemeToggle.svelte  Titlebar.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card.svelte
src/lib/state/: app.svelte.ts  compose.svelte.ts  confirm.svelte.ts  theme.svelte.ts
src/lib/views/: ContainerDetails.svelte  ContainerList.svelte  ContainersView.svelte  EngineGate.svelte  ImagesView.svelte  NetworksView.svelte  SettingsView.svelte  StackList.svelte  StacksView.svelte  SystemView.svelte  TopBar.svelte  UpdateBanner.svelte  VolumesView.svelte
src/routes/: +layout.svelte  +layout.ts  +page.ts
src/routes/containers/: +page.svelte
src/routes/images/: +page.svelte
src/routes/networks/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stacks/: +page.svelte
src/routes/system/: +page.svelte
src/routes/volumes/: +page.svelte
