[package]
name = "dockwin-gui"
version = "0.1.0"
description = "dockwin - a lightweight Docker Desktop alternative for Windows 11"
authors = ["dockwin contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/p-arndt/dockwin"
edition = "2021"
rust-version = "1.77"

# Desktop-only (Windows 11) build: a single binary crate. `docker.rs` and
# `commands.rs` are plain modules of the binary, so no separate lib target is needed.
[[bin]]
name = "dockwin-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Shared engine core (provisioning + WSL lifecycle), shared with the CLI ---
dockwin-core = { path = "../crates/dockwin-core" }

# --- Tauri v2 ---
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# In-app updater (signed GitHub-release updates) + relaunch after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Open published-container ports / URLs in the OS default browser.
tauri-plugin-opener = "2"

# --- Docker Engine API client ---
# bollard 0.18 ships current Docker API bindings and (on Windows) named-pipe transport.
bollard = { version = "0.18" }

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Misc ---
thiserror = "2"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.4"

[features]
# This feature is used by the `tauri` CLI for production builds.
custom-protocol = ["tauri/custom-protocol"]

# NOTE: release profile is defined at the workspace root (../Cargo.toml);
# member-level profiles are ignored in a workspace.
